Fixes overflow

--- a/added-serp/style3.css
+++ b/added-serp/style3.css
@@ -135,3 +135,8 @@ body {
     margin-top: 1rem;
     font-size: 0.8rem;
 }
+
+section{
+    max-height: 100vh;
+    overflow: auto;
+}
